Add "Open File" button to use Storage Access Framework
The Open File button launches the System UI for a file picker. Picking a file doesn't do anything yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="buzzWord">The most common word</string>
     <string name="uniqueWords">Number of distinct words</string>
     <string name="totalWord">Total word count</string>
+    <string name="openFileButton">OPEN FILE</string>
 </resources>
