--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="uniqueWords">Number of distinct words</string>
     <string name="totalWord">Total word count</string>
     <string name="openFileButton">OPEN FILE</string>
+    <string name="clearHistory">Clear History</string>
 </resources>
