--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WORD CLOUD</string>
+    <string name="app_name">Word Cloud</string>
     <string name="action_settings">Settings</string>
     <string name="generate">GENERATE!</string>
     <string name="appearanceRate">Percentage of the appearnce</string>
