--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WORD CLOUD</string>
+    <string name="app_name">Word Cloud</string>
     <string name="action_settings">Settings</string>
     <string name="generate">GENERATE!</string>
     <string name="appearanceRate">Percentage of the appearnce</string>
@@ -7,4 +7,6 @@
     <string name="buzzWord">The most common word</string>
     <string name="uniqueWords">Number of distinct words</string>
     <string name="totalWord">Total word count</string>
+    <string name="openFileButton">OPEN FILE</string>
+    <string name="clearInput">Clear Input</string>
 </resources>
