add new History activity and update menus

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="totalWord">Total word count</string>
     <string name="openFileButton">OPEN FILE</string>
     <string name="clearInput">Clear Input</string>
+    <string name="stringHistory">History</string>
 </resources>
